<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center">

    <EditText
        android:layout_width="281dp"
        android:layout_height="51dp"
        android:minHeight="48dp"
        android:text="Calculando..."
        android:textAlignment="center"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="97dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="92dp"
        android:layout_height="264dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="161dp">

        <Button
            android:id="@+id/botonSumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"></Button>

        <Button
            android:id="@+id/boton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton1"></Button>

        <Button
            android:id="@+id/boton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton4"></Button>

        <Button
            android:id="@+id/boton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7"></Button>

        <Button
            android:id="@+id/botonmultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonMultiplicar"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="89dp"
        android:layout_height="280dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="161dp">

        <Button
            android:id="@+id/botonCE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonCE"></Button>

        <Button
            android:id="@+id/boton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"></Button>

        <Button
            android:id="@+id/boton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton5"></Button>

        <Button
            android:id="@+id/boton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton8"></Button>

        <Button
            android:id="@+id/botonDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonDivision"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="91dp"
        android:layout_height="267dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="258dp"
        tools:layout_editor_absoluteY="161dp">

        <Button
            android:id="@+id/botonIgual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonIgual"></Button>

        <Button
            android:id="@+id/boton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton3"></Button>

        <Button
            android:id="@+id/boton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"></Button>

        <Button
            android:id="@+id/boton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9"></Button>

        <Button
            android:id="@+id/botonRestar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"></Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>